--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,7 +2,7 @@
 
 
 .aboutbanner{
-
+        background-color: #000;
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -14,6 +14,7 @@
         height:100vh;
 }
 .aboutdetails{
+        background-color: #141b29;
         display: flex;
         margin: 100px;
         color: white;
@@ -32,13 +33,28 @@
 .detailstitle>h3{
         font-size: 50px;
         text-decoration: underline;
-        text-decoration-color: #95201a00;
+        text-decoration-color: #6b1e1a00;
 }
 .detailstitle>p{
         font-weight: 100;
         text-align: left;
         
         
+}
+.detail p{
+        font-size: larger;
+}
+.divide {
+        background-color: #95201a;
+        width: 100%;
+        height: 2px;
+        margin: 30px 0;
+}
+.divid{
+        background-color: #95201a;
+        width: 2px;
+        height: 120vh;
+        margin: 30px;
 }
 .customer{
         background-image:url('../assets/images/customer.jpg');
