--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -1,19 +1,15 @@
-
-
-
-.topbanner{
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        color: white;
-        background-image:url('../assets/images/service.jpg');
-        background-repeat:no-repeat;
-        background-position:center;
-        background-size:  100%;
-        height:100vh;
-        
-    
+.topbanner {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    background-image: url('../assets/images/service.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover; /* Updated property */
+    height: 100vh;
 }
+  
 .bannertitle{
     font-size: 68px;
 
